version/0.28/_sources/api/solver/_autosummary/settings/contact_angles.rst.txt
:orphan:

.. _contact_angles:

contact_angles
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.contact_angles
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`contact_angles_child <contact_angles_child>`


.. rubric:: Included in:

====================================   =============================================================

Parent                                                                                       Summary

====================================   =============================================================
:ref:`porous_jump_1 <porous_jump_1>`       Allows to change porous-jump model variables or settings.

:ref:`multiphase_7 <multiphase_7>`          Allows to change multiphase model variables or settings.

====================================   =============================================================

